syntax = "proto3";

package pb;

service VideoCapture {
  rpc ExtractImage (stream VideoCaptureRequest) returns (VideoCaptureReply) {}
}

message VideoCaptureRequest {
  bytes video =1;
  string name = 2;
  int32 width = 3;
  int32 height =4;
  int64 time =5;
}

message OverlayImage{
  string path =1;
  int32 x=2;
  int32 y=3;
}

message VideoCaptureReply {
  bytes data =1;
 }
